# free_fleet

./: .gitignore  README.md  codecov.yaml  ff.repos  ff_ros2.repos  free_fleet.repos  free_fleet_ros2.repos  ros1.repos  ros1_examples.repos  ros2.repos  tags
ff_examples_ros1/: CHANGELOG.rst  CMakeLists.txt  package.xml
ff_examples_ros1/launch/: fake_client.launch  multi_turtlebot3_ff.launch  turtlebot3_world_ff.launch
ff_examples_ros1/rviz/: multi_turtlebot3_ff.rviz
ff_examples_ros2/: CHANGELOG.rst  CMakeLists.txt  package.xml
ff_examples_ros2/launch/: fake_client.launch.xml  fake_server.launch.xml  turtlebot3_world_ff.launch.xml
ff_examples_ros2/maps/: world.yaml
ff_examples_ros2/params/: turtlebot3_world_burger.yaml  turtlebot3_world_waffle.yaml  turtlebot3_world_waffle_pi.yaml
ff_rmf_adapter/: CMakeLists.txt  package.xml
ff_rmf_adapter/src/: FleetAdapter.cpp  FleetAdapter.hpp  RmfFrameTransformer.cpp  RmfFrameTransformer.hpp  RobotCommand.cpp  RobotCommand.hpp  main.cpp  utilities.cpp  utilities.hpp
ff_rviz_plugins_ros1/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
ff_rviz_plugins_ros1/src/: ff_nav_goal_panel.cpp  ff_nav_goal_panel.hpp
free_fleet/: CHANGELOG.rst  CMakeLists.txt  old_RobotInfo.hpp  package.xml  setup.cfg  setup.py
free_fleet/cmake/: free_fleet-config.cmake.in
free_fleet/free_fleet/: convert.py  ros1_types.py  ros2_types.py  types.py  utils.py
free_fleet/src/: Client.cpp  ClientImpl.cpp  ClientImpl.hpp  Console.cpp  CoordinateTransformer.cpp  Executor.cpp  FrameTransformer.cpp  Manager.cpp  Participant.cpp  RequestInfo.hpp  RequestPublisher.cpp  Server.cpp  ServerImpl.cpp  ServerImpl.hpp  SimpleCoordinateTransformer.cpp  StateSubscriber.cpp  internal_Manager.hpp
free_fleet/test/: main.cpp
free_fleet/tests/: test_convert.py  test_utils.py
free_fleet_adapter/: CMakeLists.txt  package.xml  setup.cfg  setup.py
free_fleet_adapter/free_fleet_adapter/: action.py  fleet_adapter.py  nav1_robot_adapter.py  nav2_execution_item.py  nav2_robot_adapter.py  robot_adapter.py
free_fleet_adapter/launch/: fleet_adapter.launch.xml
free_fleet_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
free_fleet_client/src/: ClientNode.cpp  ClientNode.hpp  ClientNodeConfig.cpp  ClientNodeConfig.hpp  main.cpp  utilities.hpp
free_fleet_client_ros1/: CHANGELOG.rst  CMakeLists.txt  package.xml
free_fleet_client_ros1/launch/: fake_client.launch  minimal_test.launch  multi_turtlebot3_ff.launch  single_turtlebot3_ff.launch  turtlebot3_world_ff.launch
free_fleet_client_ros1/src/: ClientNode.cpp  ClientNode.hpp  ClientNodeConfig.cpp  ClientNodeConfig.hpp  main.cpp  utilities.cpp
free_fleet_client_ros1/test_maps/: house.pgm  maps.yaml
free_fleet_client_ros2/: CMakeLists.txt  package.xml
free_fleet_client_ros2/src/: client_node.cpp  client_node_config.cpp  main.cpp  utilities.cpp
free_fleet_cyclonedds/: CMakeLists.txt  package.xml
free_fleet_cyclonedds/cmake/: free_fleet_cyclonedds-config.cmake.in
free_fleet_cyclonedds/idl/: MiddlewareMessages.idl
free_fleet_cyclonedds/old/: make_Publishers.cpp  make_transient_local_Publishers.cpp  make_transient_local_Subscribers.cpp  test_Client.cpp  test_Server.cpp
free_fleet_cyclonedds/src/: ClientDDSMiddleware.cpp  CycloneDDSMiddleware.cpp  Publisher.hpp  ServerDDSMiddleware.cpp  Subscriber.hpp  main.cpp
free_fleet_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
free_fleet_examples/configs/: example.json5  turtlebot3_1_zenoh_config.json5  turtlebot3_2_zenoh_config.json5  turtlebot3_world_fleet_config.yaml
free_fleet_examples/fleet_configs/: tb3_simulation_fleet_config.yaml  unique_multi_tb3_simulation_fleet_config.yaml
free_fleet_examples/free_fleet_examples/: get_tf.py  nav1_get_tf.py  nav1_move_base_cancel.py  nav1_move_base_simple_goal.py  nav1_send_move_base_simple_goal.py  nav2_cancel_all_goals.py  nav2_get_tf.py  nav2_send_dock_robot.py  nav2_send_navigate_to_pose.py  send_navigate_to_pose.py  types.py
free_fleet_examples/launch/: common.launch.xml  empty_map.launch.py  empty_map.launch.xml  fake_client.launch  fake_server.launch.xml  init_pose.launch.xml  multi_turtlebot3_ff.launch  nav1_tb3_simulation_fleet_adapter.launch.xml  nav2_tb3_simulation_fleet_adapter.launch.xml  nav2_unique_multi_tb3_simulation_fleet_adapter.launch.xml  new_test.launch.xml  office1.launch.xml  office1.xml  tb3_simulation_fleet_adapter.launch.xml  turtlebot3_world.launch.xml  turtlebot3_world_ff.launch  turtlebot3_world_ff.launch.xml  turtlebot3_world_fleet_adapter.launch.xml  turtlebot3_world_rmf_common.launch copy.xml  turtlebot3_world_rmf_common.launch.xml  unique_multi_tb3_simulation_fleet_adapter.launch.xml  zc.launch.xml
free_fleet_examples/maps/: empty_map.building.yaml  empty_map.pgm  empty_map.project.yaml  empty_map.yaml
free_fleet_examples/rviz/: multi_turtlebot3_ff.rviz
free_fleet_examples/scripts/: send_destination_request.py  send_initial_pose.py  send_mode_request.py
free_fleet_examples/zenoh_configs/: turtlebot3_1_client_zenoh_config.json5  turtlebot3_1_zenoh_config.json5  unique_multi_tb3_zenoh_config.json5
free_fleet_examples_ros1/: CMakeLists.txt  package.xml
free_fleet_examples_ros1/launch/: multi_turtlebot3_ff.launch  single_turtlebot3_ff.launch  turtlebot3_world_ff.launch
free_fleet_examples_ros1/rviz/: multi_turtlebot3_ff.rviz
free_fleet_examples_ros1/test_maps/: maps.pgm
free_fleet_examples_ros2/: CMakeLists.txt  package.xml
free_fleet_examples_ros2/launch/: fake_server.launch.xml  turtlebot3_world_ff.launch.xml
free_fleet_panel_ros2/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
free_fleet_panel_ros2/launch/: free_fleet_panel_ros2.launch.py  turtlebot3_world_viz.launch.py
free_fleet_panel_ros2/src/: FreeFleetPanel.cpp  FreeFleetPanel.hpp  RobotViewController.cpp  RobotViewController.hpp
free_fleet_rmf_adapter/: CMakeLists.txt  package.xml
free_fleet_rmf_adapter/src/: main.cpp  (+8 more)
free_fleet_server/: CHANGELOG.rst  CMakeLists.txt  package.xml
free_fleet_server_ros2/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+365 files in other folders)
