<?xml version="1.0"?>
<package format="2">
  <name>ff_examples_ros1</name>
  <version>0.0.1</version>
  <description>A package containing some examples of using free fleet ROS1 components</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache 2.0</license>
  <author email="aaron@openrobotics.org">Aaron Chong</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>free_fleet_client_ros1</exec_depend>

  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>tf2</exec_depend>
</package>
