<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ff_examples_ros2</name>
  <version>1.0.0</version>
  <description>A package containing some examples of using free fleet ROS 2 components</description>
  <maintainer email="aaron@openrobotics.org">Aaron</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rmf_fleet_msgs</exec_depend>
  <exec_depend>free_fleet_client_ros2</exec_depend>
  <exec_depend>free_fleet_server_ros2</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
