<?xml version="1.0"?>
<package format="2">
  <name>ff_rviz_plugins_ros1</name>
  <version>1.0.0</version>
  <description>A package containing rviz plugins that works with free fleet ROS1</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache 2.0</license>
  <author email="aaron@openrobotics.org">Aaron Chong</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

  <depend>free_fleet</depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
