<?xml version="1.0"?>
<package format="3">
  <name>free_fleet</name>
  <version>1.0.0</version>
  <description>Free Fleet client and server library</description>
  <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cyclonedds</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
