<?xml version="1.0"?>
<package format="3">
  <name>free_fleet</name>
  <version>1.9999.0</version>
  <description>Free Fleet client and server library</description>
  <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache 2.0</license>
  <author email="morgan@openrobotics.org">Morgan Quigley</author>
  <author email="aaron@openrobotics.org">Aaron Chong</author>

  <buildtool_depend>ament_cmake_rolling</buildtool_depend>

  <depend>cyclonedds_rolling</depend>
  <depend>libssl-dev</depend>
  <depend>crypto++</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
