<?xml version="1.0"?>
<package format="3">
  <name>free_fleet</name>
  <version>0.1.0</version>
  <description>Free Fleet client and manager library</description>
  <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache 2.0</license>
  
  <depend>rmf_utils</depend>
  <depend>rmf_traffic</depend>
  <depend>eigen</depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>rmf_cmake_uncrustify</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
