<?xml version="1.0"?>
<package format="2">
  <name>free_fleet_client_ros1</name>
  <version>1.0.0</version>
  <description>Free Fleet client ROS 1 wrapper</description>
  <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache 2.0</license>
  <author email="morgan@openrobotics.org">Morgan Quigley</author>
  <author email="aaron@openrobotics.org">Aaron Chong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>

  <depend>free_fleet</depend>
</package>
