<?xml version="1.0"?>
<package format="3">
  <name>free_fleet_cyclonedds</name>
  <version>0.1.0</version>
  <description>Free fleet middleware implementation using CycloneDDS</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache 2.0</license>

  <depend>free_fleet</depend>
  <depend>cyclonedds</depend>
  <depend>rmf_utils</depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>rmf_cmake_uncrustify</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
